--- a/tasks/nginx/main.yml
+++ b/tasks/nginx/main.yml
@@ -1,10 +1,5 @@
-- name: Checking that nginx is installed
-  shell: service nginx status
-  register: zray_nginx_exists
-  ignore_errors: true
-  
-- fail: msg="Nginx is not installed"
-  when: zray_nginx_exists.stderr == 1
+- name: Checking that nginx is running
+  service: name=nginx state=started
 
 - name: Installing php5-fpm
   apt: name=php5-fpm
@@ -14,4 +9,4 @@
   when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian'
   
 - set_fact: zray_nginx_conf_parameter="nginx=/etc/nginx/default.d"
-  when: ansible_distribution == 'CentOS'
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
