--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,12 +1,12 @@
 ---
 galaxy_info:
-  author: Thomas Louis
+  author: "Thomas Louis"
   description:
-  company: Inovia-Team
-  license: BSD
-  min_ansible_version: 1.2
+  company: "Inovia-Team"
+  license: "BSD"
+  min_ansible_version: "1.8"
   platforms:
-   - name: Ubuntu
+   - name: "Ubuntu"
      versions:
       - trusty
       - utopic
@@ -15,23 +15,10 @@ galaxy_info:
   # Below are all categories currently available. Just as with
   # the platforms above, uncomment those that apply to your role.
   #
-  #categories:
-  #- cloud
-  #- cloud:ec2
-  #- cloud:gce
-  #- cloud:rax
-  #- clustering
-  #- database
-  #- database:nosql
-  #- database:sql
+  categories:
   - development
   - monitoring
-  #- networking
-  #- packaging
   - system
   - web
 dependencies: []
-  # List your role dependencies here, one per line.
-  # Be sure to remove the '[]' above if you add dependencies
-  # to this list.
 
