--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,10 +8,20 @@ galaxy_info:
   platforms:
    - name: "Ubuntu"
      versions:
+      - precise
+      - quantal
+      - raring
+      - saucy
+      - utopic
       - trusty
       - utopic
       - vivid
       - wily
+   - name: "Debian"
+     versions:
+      - lenny
+      - squeeze
+      - wheezy
   # Below are all categories currently available. Just as with
   # the platforms above, uncomment those that apply to your role.
   #
